plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/tier1/kotlinJvmConsumesKmmLibBinary/kmmLib/src/iosMain/kotlin/test/kmmLib_iosMain_api.kt
package test

actual class <!LINE_MARKER("descr='Has expects in project.kmmLib.commonMain module'")!>CommonMainExpect<!> {
    actual fun <!LINE_MARKER("descr='Has expects in project.kmmLib.commonMain module'")!>commonApi<!>() { }

    fun iosApi() { }
}

fun produceIosMainExpect(): CommonMainExpect = null!!
fun consumeIosMainExpect(e: CommonMainExpect) { }
